Added infrastructure for admin functions

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\WeeklyXamarin.AdminServices\WeeklyXamarin.AdminServices.csproj" />
     <ProjectReference Include="..\Client\WeeklyXamarin.Blazor.Client.csproj" />
   </ItemGroup>
 
