Added Ability to Post to Curated

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj
@@ -7,6 +7,7 @@
 
   <PropertyGroup>
     <VersionSuffix>$([System.DateTime]::get_Now().get_Year())$([System.DateTime]::get_Now().get_Month().ToString("D2"))$([System.DateTime]::get_Now().get_Day().ToString("D2"))-$([System.DateTime]::get_Now().get_Hour().ToString("D2"))$([System.DateTime]::get_Now().get_Minute().ToString("D2"))</VersionSuffix>
+    <UserSecretsId>dd1ea8d4-da9f-4872-8f0a-819ff44e6339</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
