--- a/.github/workflows/azure-webapps-deploy.yml
+++ b/.github/workflows/azure-webapps-deploy.yml
@@ -51,7 +51,7 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Build with dotnet
-        run: dotnet build ./WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj --configuration Release
+        run: dotnet build ./src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
