Update Publish directory

--- a/.github/workflows/azure-webapps-deploy.yml
+++ b/.github/workflows/azure-webapps-deploy.yml
@@ -54,7 +54,7 @@ jobs:
         run: dotnet build ./src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./src/WeeklyXamarin.Mobile/WeeklyXamarin.Blazor/Server/WeeklyXamarin.Blazor.Server.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
