Uber advanced curation engine

--- a/src/WeeklyXamarin.Mobile/WeeklyXamarin.AdminServices/WeeklyXamarin.AdminServices.csproj
+++ b/src/WeeklyXamarin.Mobile/WeeklyXamarin.AdminServices/WeeklyXamarin.AdminServices.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Data.Tables" Version="12.4.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.40" />
     <PackageReference Include="YoutubeExplode" Version="6.0.7" />
   </ItemGroup>
